<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TaxiLink</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Strings used for Page Navigation -->
    <string name="next">Next</string>
    <string name="back">Go Back</string>
    <string name="previous">Previous</string>
    <!-- Home Page -->
    <string name="home_page">Home Page</string>
    <string name="request_link_home_page">Request Link</string>
    <string name="offer_link_home_page">Offer Link</string>


    <!-- Strings used for Login System -->
    <!-- Login Page -->
    <string name="login_button">LOGIN</string>
    <string name="login_header">Log In</string>
    <string name="login_new_account_button">Not a member? Create a new account</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>


    <!-- Strings used for Account Registration system -->
    <!-- Create Account Page -->
    <string name="create_account_label">Create Account</string>
    <string name="account_reg_cancel">Cancel</string>
    <string name="account_reg_submit">Submit</string>
    <string name="email_field_header">Email</string>
    <string name="password_field_header">Password</string>
    <string name="date_field_header">Date of Birth</string>
    <string name="last_name_field_header">Last Name</string>
    <string name="first_name_field_header">First Name</string>
    <string name="create_account_title">Create your Account</string>
    <!-- Email Verification Page -->
    <string name="send_code_button">Send Code</string>
    <string name="email_verification">Email Verification</string>
    <!-- Policy Page -->
    <string name="legal_policy_page">Legal Policy</string>
    <string name="privacy_policy_page">Privacy Policy</string>

    <!-- Strings used for End Ride system -->
    <!-- Display Fare Page -->
    <string name="fare_phrase">This is the fare for your ride:</string>
    <string name="Display_Fare">Display Fare</string>
    <!-- Carpool Ratings Page -->
    <string name="rating_phrase">Please rate your fellow taxi riders:</string>
    <string name="carpooler_name1">Name 1</string>
    <string name="carpooler_name2">Name 2</string>
    <string name="Rating"> Rating</string>
    <!-- Confirm Arrival Page -->
    <string name="arrival_phrase">It looks like you have arrived!</string>
    <string name="confirm_arrival_button">Confirm Arrival</string>


    <!-- Strings used for Request Link system -->
    <!-- Request Link Main Page -->
    <string name="request_link_main_header">Request Link</string>
    <string name="request_link_taxi_dest_header">Taxi Destination:</string>
    <string name="request_link_pickup_header">Pick-up Location:</string>
    <string name="request_link_destination_hint">Destination Address</string>
    <string name="request_link_pickup_hint">Pick-up Address</string>
    <string name="request_link_submit_button">SUBMIT</string>
    <string name="request_link_cancel_button" tools:ignore="ButtonCase">CANCEL</string>
    <!-- Request Accept Deny Page -->
    <string name="request_acc_deny_header">New Join Request</string>
    <string name="accept_join_button">ACCEPT</string>
    <string name="deny_join_button">DENY</string>
    <!-- Request Results Page -->
    <string name="request_result_header">Available Links</string>
    <string name="request_result_label">Select which Link you would like to join:</string>


    <!-- Strings used for Offer Link system -->
    <!-- Offer Link Main Page -->
    <string name="offer_link_main_header">Offer Link</string>
    <string name="offer_link_welcome">Welcome to Offer Link! \n Start your Offer by scanning the Taxi QR code:</string>
    <string name="offer_link_scan_qr">Scan Taxi QR code</string>
    <string name="PolicyAgree">Agree</string>
    <string name="BackButton">Back</string>
    <string name="confirm_arrival">Confirm Arrival</string>
    <string name="nearby_locations">Nearby Locations</string>


    <!-- Strings used for Friendship system -->
    <string name="Profile">Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="friends">Friends</string>
    <string name="would_you_like_to_delete_your_account">Would you like to delete your account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_your_account">Edit your account</string>
    <string name="update">Update</string>

</resources>